--- a/calculadora.html
+++ b/calculadora.html
@@ -11,7 +11,7 @@
         <h1>Calculadora</h1>
         <div class="calculadora">
             
-            <p id="resultado">A</p>
+            <p id="resultado"></p>
 
             <table>
                 <tr>
@@ -38,7 +38,8 @@
                     <td><button onclick="adicionar('1')">1</button></td>
                     <td><button onclick="adicionar('2')">2</button></td>
                     <td><button onclick="adicionar('3')">3</button></td>
-                    <td rowspan="2"><button class="act" onclick="calcular()" style="height: 106px;">=</button></td>
+                    <td rowspan="2"><button class="res" onclick="calcular()" 
+                        style="height: 106px;font-weight: bold;background-color: rgba(0, 0, 255, 0.553);">=</button></td>
                     
                 </tr>
                 <tr>
