--- a/calculadora.html
+++ b/calculadora.html
@@ -9,6 +9,7 @@
 <body>
     <div class="fundo">
         <h1>Calculadora</h1>
+        <div class="bcalculadora">
         <div class="calculadora">
             
             <p id="resultado"></p>
@@ -39,7 +40,7 @@
                     <td><button onclick="adicionar('2')">2</button></td>
                     <td><button onclick="adicionar('3')">3</button></td>
                     <td rowspan="2"><button class="res" onclick="calcular()" 
-                        style="height: 106px;font-weight: bold;background-color: rgba(0, 0, 255, 0.553);">=</button></td>
+                        style="height: 106px;font-weight: bold;background-color: rgba(0, 0, 255, 0.6);">=</button></td>
                     
                 </tr>
                 <tr>
@@ -48,6 +49,7 @@
                 </tr>
             </table>
      </div>
+    </div>
     </div>
     <script src="script.js"></script>
 </body>
